--- a/inst/tutorials/10partitioning/partitioning.Rmd
+++ b/inst/tutorials/10partitioning/partitioning.Rmd
@@ -36,12 +36,12 @@ There are no corresponding sections in the textbook.
 There are $N$ spherical amorphous silica particles suspended in a well-mixed volume of water. The change over time in the concentration of dissolved silica is described by the following differential equation:
 
 $$
-\frac{dSi}{dt} = -k_p \times \frac {A}{V} \times (Si - Si_{eq})
+\frac{dSi}{dt} = -k_p \cdot \frac {A}{V} \cdot (Si - Si_{eq})
 $$
 where $Si$ and $Si_{eq}$ are, respectively, the instantaneous and equilibrium concentrations of dissolved silica (both in $mol~Si~m^{-3}$).
 
 ```{r rate_constant, echo=FALSE}
-msg <- sprintf("$k_p$ is the rate constant of the backward reaction, i.e., Si precipitation. It describes the amount of Si (moles) that precipitate per unit area of the mineral surface ($m^2$), per unit time ($yr$), and per unit concentration of dissolved silica ($mol~m^{-3}$). Thus, its unit is $mol/m^2/yr/(mol~m^{-3})$, which is equal to $m~yr^{-1}$.")
+msg <- sprintf("$k_p$ is the rate constant of the backward reaction, i.e., Si precipitation. It describes the amount of Si (moles) that precipitate per unit area of the mineral surface $(m^2)$, per unit time $(yr)$, and per unit concentration of dissolved silica $(mol\\,m^{-3})$. Thus, its unit is $mol/m^2/yr/(mol\\,m^{-3})$, which is equal to $m\\,yr^{-1}$.")
 
 question(sprintf("What is the meaning and unit of the rate constant $k_p$?"), 
          type = "learnr_radio",
@@ -59,8 +59,8 @@ msg <- sprintf("$V$ has nothing to do with the volume of the silica particles! $
 
 question(sprintf("What is the meaning and unit of $V$ in the above equation?"), 
          type = "learnr_radio",
-         answer(sprintf("$V$ is the volume of an *individual* silica particle, in $m^{3}$, calculated from the radius of the individual particle as $V=(4/3)\\pi r^3$.")),
-         answer(sprintf("$V$ is the *total* volume of the silica particles, in $m^{3}$, calculated from the radius of the individual particle as $V=N\\times (4/3)\\pi r^3$.")),
+         answer(sprintf("$V$ is the volume of an *individual* silica particle, in $m^{3}$, calculated from the radius of the individual particle as $V=\\frac{4}{3}\\pi r^3$.")),
+         answer(sprintf("$V$ is the *total* volume of the silica particles, in $m^{3}$, calculated from the radius of the individual particle as $V=N\\cdot \\frac{4}{3}\\pi r^3$.")),
          answer(sprintf("$V$ is the volume of well-mixed water containing the silica particles, in $m^3$."), correct=TRUE),
  
  incorrect=msg,
@@ -73,22 +73,23 @@ msg <- sprintf("$A$ is the *total* area of the silica particles. It corresponds 
 question(sprintf("What is the meaning and unit of $A$ in the above equation?"), 
          type = "learnr_radio",
          answer(sprintf("$A$ is the area of an *individual* silica particle, in $m^{2}$, calculated from the radius of the individual particle as $A=4\\pi r^2$.")),
-         answer(sprintf("$A$ is the *total* area of all silica particles, in $m^{2}$, calculated from the radius of the individual particle as $A=N\\times 4\\pi r^2$."), correct=TRUE),
+         answer(sprintf("$A$ is the *total* area of all silica particles, in $m^{2}$, calculated from the radius of the individual particle as $A=N\\cdot 4\\pi r^2$."), correct=TRUE),
 
  incorrect=msg,
  correct=msg)
 ```
 
 ```{r eq_conc, echo=FALSE}
-msg <- sprintf("The answer is $k_d/k_p$. Tip: if you do not remember whether the formula should be $k_p/k_d$ or $k_d/k_p$, think about the units. Concentrations are in $mol~m^{-3}$, and this unit is obtained with $k_d/k_p$, not with $k_p/k_d$. Note that there are *two* correct answers in the list! ($M$ stands for $mol~L^{-1}$.)")
+msg <- sprintf("The answer is $k_d/k_p$. Tip: if you do not remember whether the formula should be $k_p/k_d$ or $k_d/k_p$, think about the units. Concentrations are in $mol~m^{-3}$, and this unit is obtained with $k_d/k_p$, not with $k_p/k_d$. Note that there are *two* correct answers in the list! Also note that $M$ (molar) stands for $mol~L^{-1}$.")
 
-question(sprintf("Assume that the rate constant describing the dissolution of a mineral in water is $k_d = 2~mol~m^{-2}~yr^{-1}$, and the rate constant describing the precipitation of that mineral is $k_p = 5~m~yr^{-1}$. What is the equilibrium concentration of the dissolved mineral in water?"), type = "learnr_checkbox",
- answer(sprintf("0.4 $mol~m^{-3}$"), correct=TRUE),
- answer(sprintf("2.5 $mol~m^{-3}$")),
- answer(sprintf("1 $mol~m^{-3}$")),
- answer(sprintf("10 $mol~m^{-3}$")),
+question(sprintf("Assume that the rate constant describing the dissolution of a mineral in water is $k_d = 2\\,mol\\,m^{-2}\\,yr^{-1}$, and the rate constant describing the precipitation of that mineral is $k_p = 5\\,m\\,yr^{-1}$. What is the equilibrium concentration of the dissolved mineral in water?"), type = "learnr_checkbox",
+ answer(sprintf("0.4 $mol\\,m^{-3}$"), correct=TRUE),
+ answer(sprintf("2.5 $mol\\,m^{-3}$")),
+ answer(sprintf("1 $mol\\,m^{-3}$")),
+ answer(sprintf("10 $mol\\,m^{-3}$")),
  answer(sprintf("400 $\\mu M$"), correct=TRUE),
  
+ allow_retry = TRUE,
  incorrect=msg,
  correct=msg)
 ```
@@ -121,13 +122,15 @@ question("What is the *initial* rate of increase in the silicic acid concentrati
          answer(sprintf("69 $mol~L^{-1}~yr^{-1}$")),
          answer(sprintf("69 $mol~m^{-3}~yr^{-1}$")),
          answer(sprintf("92 $\\mu mol~L^{-1}~yr^{-1}$")),
+         
+         allow_retry = TRUE,
  incorrect = sprintf("If you think you are using the correct formula, double check that you did not make an error during units conversion. It is recommended that you convert *all* quantities into SI units *before* calculating the final value. Note that the information about the density and molar weight of silica is irrelevant in this exercise. Also note that the *diameter*, not the *radius*, of the silica particles is provided. There are *two* correct answers!"),
  correct = sprintf("Bingo!")
 )
 ```
 
 ```{r dSidt_t, echo=FALSE}
-msg <- sprintf("The dissolution rate depends on the *difference* between the instantaneous and equilibrium concentration of silicic acid ($Si-Si_{eq}$). Because silica particles are dissolving, the silicic acid concentrations *increases* over time. Thus, the difference $Si-Si_{eq}$ is becoming smaller, implying that the third answer is correct.")
+msg <- sprintf("The dissolution rate depends on the *difference* between the instantaneous and equilibrium concentration of silicic acid $(Si-Si_{eq})$. Because silica particles are dissolving, the silicic acid concentrations *increases* over time. Thus, the difference $Si-Si_{eq}$ is becoming smaller, implying that the third answer is correct.")
 
 question("Which statement is true?", type = "learnr_radio",
  answer("The dissolution rate of silica will increase over time."),
@@ -143,12 +146,13 @@ question("Which statement is true?", type = "learnr_radio",
 ```{r statements2, echo=FALSE}
 msg <- sprintf("The correct value is calculated as $k_p/h\\cdot (O_{2,eq} - 0)$.")
 
-question(sprintf("A well-mixed *anoxic* water column is in contact with the atmosphere. What is the initial rate of increase in the $O_2$ concentration in the water? Piston velocity is $k_p = 1~m~d^{-1}$, $O_2$ solubility in the water is $300~\\mu mol~L^{-1}$, water column height is $h=50~cm$."), type = "learnr_radio",
- answer(sprintf("$300~\\mu mol~L^{-1}~d^{-1}$")),
- answer(sprintf("$150~nmol~L^{-1}~d^{-1}$")),
- answer(sprintf("$600~nmol~L^{-1}~d^{-1}$")),
- answer(sprintf("$600~\\mu mol~L^{-1}~d^{-1}$"), correct=TRUE),
+question(sprintf("A well-mixed *anoxic* water column is in contact with the atmosphere. What is the initial rate of increase in the $O_2$ concentration in the water? Piston velocity is $k_p = 1\\,m\\,d^{-1}$, $O_2$ solubility in the water is $300\\,\\mu mol\\,L^{-1}$, water column height is $h=50\\,cm$."), type = "learnr_radio",
+ answer(sprintf("$300\\, \\mu mol\\,L^{-1}\\,d^{-1}$")),
+ answer(sprintf("$150\\, nmol\\,L^{-1}\\,d^{-1}$")),
+ answer(sprintf("$600\\, nmol\\,L^{-1}\\,d^{-1}$")),
+ answer(sprintf("$600\\, \\mu mol\\,L^{-1}\\,d^{-1}$"), correct=TRUE),
  
+ allow_retry = TRUE,
  incorrect=msg,
  correct=msg)
 ```
@@ -184,7 +188,8 @@ question("What is the maximum number of goldfish you can have in the pond so tha
          answer("1090 fish"),
          answer("100 fish"),
 
- incorrect = sprintf("Incorrect answer. If you think your formula is correct, double check that you have not made a mistake during units conversion. If you cannot come up with the formula, consider the following hints: (1) At the minimal $O_2$ concentration where the fish respiration is still not affected, the aeration and respiration rates should be equal to each other. (2) Use your knowledge of physical chemistry (Henry's law) to quantify the $O_2$ solubility at the given partial pressure of $O_2$ in the atmosphere. (3) Estimate the total air-water exchange (amount of $O_2$ added to the pond per day, $mol~O_2~d^{-1}$) at the minimal $O_2$ concentration. (4) You know the respiration rate for one fish, so you can easily calculate the total respiration rate by all fish in the pond."),
+         allow_retry = TRUE,
+ incorrect = sprintf("Incorrect answer. If you think your formula is correct, double check that you have not made a mistake during units conversion. If you cannot come up with the formula, consider the following hints: (1) At the minimal $O_2$ concentration where the fish respiration is still not affected, the aeration and respiration rates should be equal to each other. (2) Use your knowledge of physical chemistry (Henry's law) to quantify the $O_2$ solubility at the given partial pressure of $O_2$ in the atmosphere. (3) Estimate the total air-water exchange (amount of $O_2$ added to the pond per day, $mol\\,O_2\\,d^{-1}$) at the minimal $O_2$ concentration. (4) You know the respiration rate for one fish, so you can easily calculate the total respiration rate by all fish in the pond."),
  correct = sprintf("Bingo!")
 )
 ```
@@ -192,7 +197,7 @@ question("What is the maximum number of goldfish you can have in the pond so tha
 And one extra question:
 
 ```{r Fish_point_height, echo=FALSE}
-msg <- "It may be somewhat counter-intuitive, but the answer is 'no'. This is because the air-water exchange rate - in terms of the *amount* of $O_2$ exchanged per unit time ($mol~O_2~d^{-1}$) - is proportional to the *area* of the air-water interface through which the exchange occurs (as long as the water column is well-mixed)."
+msg <- "It may be somewhat counter-intuitive, but the answer is 'no'. This is because the air-water exchange rate - in terms of the *amount* of $O_2$ exchanged per unit time $(mol\\,O_2\\,d^{-1})$ - is proportional to the *area* of the air-water interface through which the exchange occurs (as long as the water column is well-mixed)."
   
 question("Does the maximum number of goldfish in the pond depend on the height of the water column?", type = "learnr_radio",
  answer("Yes"),
